[package]
name = "archway-nft"
version = "0.1.0"
authors = ["Augusto Elesbão <https://github.com/aelesbao>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
cosmwasm-std = "0.16.2"
cosmwasm-storage = "0.16.2"
cw-storage-plus = "0.9.1"
cw0 = "0.9.1"
cw2 = "0.9.1"
cw721 = "0.9.2"
schemars = "0.8.8"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = "1.0.26"

[dev-dependencies]
cosmwasm-schema = "0.16.2"
